--- a/rideshare/package.json
+++ b/rideshare/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.416.0",
+    "maplibre-gl": "^4.5.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
