--- a/rideshare/package.json
+++ b/rideshare/package.json
@@ -23,9 +23,9 @@
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.416.0",
     "maplibre-gl": "^4.5.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
